<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="#FFEB3B">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:contentDescription="@string/background"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/bgapp" />

    <Button
        android:id="@+id/stm"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#D9D3D3"
        android:text="@string/stm32"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tiva" />

    <Button
        android:id="@+id/resistencia"
        android:layout_width="249dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#EFE688"
        android:text="@string/resistencia"
        android:textColor="#000000"
        android:textColorLink="#FFEB3B"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.469"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/cap"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FF9800"
        android:text="@string/capacitor"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/resistencia" />

    <Button
        android:id="@+id/trans"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#8D958E"
        android:text="@string/transistor"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/motor" />

    <Button
        android:id="@+id/motor"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#FFEB3B"
        android:text="@string/motor"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cap" />

    <Button
        android:id="@+id/rasp"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#4CAF50"
        android:text="@string/raspberry"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/trans" />

    <Button
        android:id="@+id/arduino"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#2196F3"
        android:text="@string/arduino"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rasp" />

    <Button
        android:id="@+id/tiva"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#E91E63"
        android:text="@string/tiva"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/arduino" />

    <Button
        android:id="@+id/esp"
        android:layout_width="259dp"
        android:layout_height="48dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="#B7A3DC"
        android:text="@string/esp32"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.467"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stm" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="306dp"
        android:layout_height="60dp"
        android:layout_marginTop="33dp"
        android:gravity="center"
        android:text="@string/pregunta"
        android:textAlignment="center"
        android:textColor="#FFF8F8"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>